--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
